--- a/web/themes/crane/scss/components/_navigation.scss
+++ b/web/themes/crane/scss/components/_navigation.scss
@@ -154,6 +154,9 @@
 			box-shadow: none !important;
 			background-color: transparent;
 			margin: 0;
+			&:not(:first-child){
+				margin: 0 0 0 -1px;
+			}
 		 	a{
 				background: $tabsActiveBack;
 				color: $tabsActiveText;
