--- a/web/themes/crane/scss/elements/_buttons.scss
+++ b/web/themes/crane/scss/elements/_buttons.scss
@@ -347,3 +347,14 @@ $buttonPadding: 1.15rem 1.5rem 1rem;
 		opacity: .6;
 	}
 } 
+
+
+/* CKE MEDIA EMBED BUTTON
+------------------------- */
+.cke_button_icon{
+	&.cke_button__media_icon{
+		background-image: url('../images/icons/admin-icons/media-embed.svg') !important;
+	}
+}
+
+
